# compress-video-server

./: .gitattributes  .gitignore  .gitmodules  Makefile  README.md  compress-video-server.cabal  compress-videos-server.cabal  stack.yaml
app/: Main.hs
src/VC/: Server.hs
src/VC/Server/: Class.hs  Environment.hs  Prelude.hs  Route.hs  Router.hs  Routes.hs  Types.hs
src/VC/Server/DB/: User.hs
src/VC/Server/Route/: Preset.hs  Release.hs
src/VC/Server/Routes/: Config.hs
test/: Spec.hs  test.db  testConfig.txt
test/test-resource/: test.db
test/test-resource/current/: fingerprints.txt
