name:                compress-videos-server
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/compress-videos-server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     VC.Server
                     , VC.Server.Route
                     , VC.Server.Router
                     , VC.Server.DB.User
                     , VC.Server.Route.Release
                     , VC.Server.Environment
                     , VC.Server.Prelude
                     , VC.Server.Route.Preset
                     , VC.Server.Class
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  build-depends:       mtl
                     , bytestring
                     , happstack-server
                     , aeson
                     , data-to-json-file
                     , db-model
                     , directory
                     , aeson
                     , HDBC
                     , HDBC-sqlite3

executable compress-videos-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , compress-videos-server
                     , mtl
                     , data-to-json-file
  default-language:    Haskell2010

test-suite compress-videos-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , compress-videos-server
                     , hspec
                     , mtl
                     , data-to-json-file
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/compress-videos-server
